--- a/Month 1/Android/PerformingBackgroundTaskNotificationPart1/app/src/main/res/layout/activity_main.xml
+++ b/Month 1/Android/PerformingBackgroundTaskNotificationPart1/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
         android:layout_marginEnd="72dp"
-        android:text="Button"
+        android:text="Pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
