--- a/Bootcamp/Android/Storage_Part_2/app/src/main/res/layout/cardview_recycler.xml
+++ b/Bootcamp/Android/Storage_Part_2/app/src/main/res/layout/cardview_recycler.xml
@@ -19,7 +19,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
 
             android:layout_marginBottom="8dp"
@@ -39,9 +39,9 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="54dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="24dp"
                     android:layout_marginBottom="8dp"
                     android:text="@{file.name}"
                     android:textColor="#000000"
